<resources>
    <string name="app_name">GOYES</string>
    <string name="tmdb_api_key">b844f44d1b5a8c2163a76f3dc6bd33bf</string>
    <string name="default_tmdb_popular_movies_language">en-US</string>
    <string name="default_tmdb_popular_movies_page_to_query">1</string>
    <string name="debug_tag">GOYES</string>
    <string name="JSONArray_TAG_results">results</string>
    <string name="JSONObject_TAG_vote_count">vote_count</string>
    <string name="JSONObject_TAG_id">id</string>
    <string name="JSONObject_TAG_video">video</string>
    <string name="JSONObject_TAG_vote_average">vote_average</string>
    <string name="JSONObject_TAG_title">title</string>
    <string name="JSONObject_TAG_popularity">popularity</string>
    <string name="JSONObject_TAG_poster_path">poster_path</string>
    <string name="JSONObject_TAG_original_language">original_language</string>
    <string name="JSONObject_TAG_original_title">original_title</string>
    <string name="JSONObject_TAG_genre_ids">genre_ids</string>
    <string name="JSONObject_TAG_backdrop_path">backdrop_path</string>
    <string name="JSONObject_TAG_adult">adult</string>
    <string name="JSONObject_TAG_overview">overview</string>
    <string name="JSONObject_TAG_release_date">release_date</string>
    <string name="has_video_tag">__HASVIDEO__</string>
    <string name="JSONObject_TAG_budget">budget</string>
    <string name="JSONObject_TAG_youtubevideo">key</string>

    <string name="signature_goyes">Luis David Goyes Garcés</string>
    <string name="filter_vote_couter_greater_2000"><![CDATA[Filter: Vote counter > 2000]]></string>
    <string name="filter_show_only_favorite_movies">Filter: Show only favs</string>
    <string name="activitydetail_movietitle">Movie title</string>
    <string name="activitydetail_watchtrailer">Click here to watch trailer</string>
    <string name="activitydetail_overview">Overview</string>
    <string name="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean maximus aliquet libero, et lobortis ante commodo vitae. Nullam sit amet magna nunc. Etiam accumsan, leo eu porta fringilla, leo justo porta orci, id tincidunt sapien magna pharetra arcu. Pellentesque sed turpis sapien. Sed a ipsum rutrum justo molestie viverra at quis ligula. Ut mauris quam, sodales et arcu eu, tempus suscipit lorem. Nullam faucibus, lectus ac feugiat consectetur, massa odio euismod sem, sed pellentesque felis dui eu justo. Maecenas aliquam ultricies lacus, quis venenatis sapien suscipit at. Etiam dapibus sit amet nunc et congue.  Sed mollis diam eget leo pretium elementum. Sed convallis purus odio, at condimentum nunc aliquam eget. Aliquam et maximus sem, vitae pellentesque ipsum. Sed ut tortor eget magna eleifend pulvinar ut a justo. Donec et ultrices metus, id molestie orci. Fusce sit amet tempus orci, nec maximus leo. Vestibulum at magna quis diam iaculis ultricies vitae vitae dui. Aliquam erat volutpat. Cras sed consequat felis. Nam a iaculis nisi. Nulla metus sapien, rutrum nec aliquam at, rutrum at purus. Curabitur eget libero lorem. Ut vehicula ac mauris quis luctus. Etiam sed accumsan magna.</string>
    <string name="activitydetail_releasedate">Release date</string>
    <string name="activitydetail_releasedate_example">09/08/1994</string>
    <string name="activitydetail_budget">Budget</string>
    <string name="activitydetail_budget_example">14\'000.000 USD</string>
    <string name="activitydetail_voteaverage">0.0</string>
    <string name="preference_file_key">condor_goyes</string>
    <string name="preference_last_download">last_download</string>


</resources>
